--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -27,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "ts-node-dev": "^2.0.0",
+    "twilio": "^5.2.3",
     "typescript": "^5.5.4"
   }
 }
